[tool.poetry]
name = "loamy"
version = "0.0.6"
description = ""
authors = ["Zach Fuller <zach.fuller1222@gmail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/fullerzz/loamy"
packages = [{include = "loamy", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = ">=3.9.5"
aiodns = "~3.1.1"
msgspec = "~0.18.6"
uvloop = { version = "0.19.0", optional = true }

[tool.poetry.group.dev.dependencies]
ruff = "~0.3.7"
pre-commit = "3.5.0"
pytest = "^7.4.4"
pytest-asyncio = "^0.21.1"
blacksheep = "^2.0.7"
uvicorn = "^0.24.0.post1"
mypy = "^1.9.0"
pip-audit = "^2.7.2"
httpx = "^0.27.0"

[tool.poetry.extras]
uvloop = ["uvloop"]

[tool.ruff]
extend-exclude = ["tests"]
line-length = 88
indent-width = 4

target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "C90", "I", "N", "UP", "ASYNC", "S", "B", "ERA", "PLE", "PLW", "PERF", "RUF"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
