[project]
name = "loamy"
version = "0.0.10"
description = "This project allows you to execute a list of http operations asynchronously from within a synchronous context."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "aiodns>=3.2.0",
    "aiohttp>=3.10.10",
    "loguru>=0.7.2",
    "pydantic>=2.9.2",
]

[project.optional-dependencies]
uvloop = [
    "uvloop>=0.21.0",
]

[dependency-groups]
dev = [
    "httpx>=0.27.2",
    "mypy>=1.13.0",
    "pip-audit>=2.7.3",
    "pre-commit>=4.0.1",
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.3",
    "uvicorn>=0.32.0",
    "quart>=0.19.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
python-preference = "system"
python-downloads = "manual"

[tool.uv.pip]
strict = true

[tool.ruff]
extend-exclude = ["tests"]
line-length = 88
indent-width = 4

target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "C90", "I", "N", "UP", "ASYNC", "S", "B", "ERA", "PLE", "PLW", "PERF", "RUF"]
ignore = ["E501"]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
